--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -11,7 +11,7 @@ on:
 jobs: 
     install-pip-deps:
         name: Install pip deps
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         steps:
             - uses: actions/checkout@v4
@@ -21,7 +21,7 @@ jobs:
 
     deploy-to-dev:
         name: Deploy-to-DEV
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [install-pip-deps]  
         steps:
             - uses: actions/checkout@v4
@@ -32,7 +32,7 @@ jobs:
 
     tests-on-dev:
         name: Tests-on-DEV
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [deploy-to-dev]  
         steps:
             - uses: actions/checkout@v4
@@ -41,7 +41,7 @@ jobs:
 
     deploy-to-staging:
         name: Deploy-to-staging
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [tests-on-dev]  
         steps:
             - name: Message about starting
@@ -49,7 +49,7 @@ jobs:
 
     tests-on-staging:
         name: Tests-on-staging
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [deploy-to-staging]  
         steps:      
         - name: Message about starting
@@ -57,7 +57,7 @@ jobs:
 
     deploy-to-preprod:
         name: Deploy-to-preprod
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [tests-on-staging]  
         steps:      
         - name: Message about starting
@@ -66,7 +66,7 @@ jobs:
 
     tests-on-preprod:
         name: Tests-on-preprod
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [deploy-to-preprod]  
         steps:
             - name: Message about starting
@@ -74,7 +74,7 @@ jobs:
 
     deploy-to-prod:
         name: deploy-to-prod
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [tests-on-preprod]  
         steps:
             - name: Message about starting
@@ -82,7 +82,7 @@ jobs:
 
     test-on-prod:
         name: test-on-prod
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         needs: [deploy-to-prod]  
         steps:
             - name: Message about starting
