--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -22,6 +22,10 @@ jobs:
             - name: Message about starting
               run: echo Pip and deps installing has started
 
+            - name: Install dependecies
+              run: pip install -r py-gre/requirements.txt
+
+
 
     deploy-to-dev:
         name: Deploy-to-DEV
