--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -23,7 +23,9 @@ jobs:
               run: echo Pip and deps installing has started
 
             - name: Install dependecies
-              run: pip install -r py-gre/requirements.txt
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r py-gre/requirements.txt
 
 
 
