--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -23,8 +23,7 @@ jobs:
               run: echo Pip and deps installing has started
 
             - name: Install dependecies
-              run: |
-                python -m pip install --upgrade pip
+              run: 
                 pip install -r py-gre/requirements.txt
 
 
