--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -24,8 +24,7 @@ jobs:
           run: echo Pip and deps installing has started
 
         - name: Install dependecies
-          run: 
-            pip install -r py-gre/requirements.txt
+          run: pip install -r py-gre/requirements.txt
 
 
 
