--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -14,12 +14,12 @@ jobs:
       runs-on: self-hosted
 
       steps:
-        - uses: actions/checkout@v4
+        #- uses: actions/checkout@v4
         - uses: actions/checkout@v4
           with:
             repository: 'mtararujs/python-greetings'
             path: 'py-gre'
-            
+
         - name: Message about starting
           run: echo Pip and deps installing has started
 
