--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -14,7 +14,7 @@ jobs:
       runs-on: self-hosted
 
       steps:
-        #- uses: actions/checkout@v4
+        - uses: actions/checkout@v4
         - uses: actions/checkout@v4
           with:
             repository: 'mtararujs/python-greetings'
