--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -66,8 +66,8 @@ jobs:
             repository: 'mtararujs/course-js-api-framework'
             path: js-api
         - name: npm install
-         # working-directory: ./js-api
-          run: npm install js-api
+          working-directory: ./js-api
+          run: npm install
 
         - name: Upload test reports
           uses: actions/upload-artifact@v2
