--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -67,7 +67,8 @@ jobs:
             path: js-api
         - name: npm install
           working-directory: ./js-api
-          run: npm install
+          run: npm install; npm audit fix
+          
 
         - name: Upload test reports
           uses: actions/upload-artifact@v2
