--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -62,6 +62,18 @@ jobs:
         - name: Message about starting
           run: echo tests-on-dev has started
         - uses: actions/checkout@v4
+          with:
+            repository: 'mtararujs/python-greetings'
+            path: 'py-gre'
+        - name: Delete greetings app
+          working-directory: py-gre
+          run: pm2 delete greetings-app-dev || true
+        - name: install pm2
+          run: npm install pm2 -g
+        - name: Start app
+          working-directory: py-gre
+          run: pm2 start app.py -- name greetings-app-dev -- -- port 7001
+        - uses: actions/checkout@v4
           with: 
             repository: 'mtararujs/course-js-api-framework'
             path: js-api
