--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -26,13 +26,11 @@ jobs:
       - name: Install dependecies
         working-directory: py-gre
         run: pip install -r requirements.txt
-      # - name: install pm2
-      #   run: npm install pm2 -g
 
 
   deploy-to-dev:
     name: Deploy-to-DEV
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [install-pip-deps]  
     steps:
         - uses: actions/checkout@v4
@@ -42,11 +40,11 @@ jobs:
           with:
             repository: 'mtararujs/python-greetings'
             path: 'py-gre'
-        - name: install pm2
-          run: npm install pm2 -g
+
         - name: Delete greetings app
           working-directory: py-gre
           run: pm2 delete greetings-app-dev || true
+          
         - name: Start app
           working-directory: py-gre
           run: pm2 start app.py -- name greetings-app-dev -- -- port 7001
