--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -43,7 +43,7 @@ jobs:
 
         - name: Delete greetings app
           working-directory: py-gre
-          run: pm2 delete greetings-app-dev & set "errorlevel=0"
+          run: pm2 delete greetings-app-dev & EXIT /B 0
 
         - name: Start app
           working-directory: py-gre
