--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -41,9 +41,9 @@ jobs:
             repository: 'rinalds61/python-greetings'
             path: 'py-gre'
 
-        # - name: Delete greetings app
-        #   working-directory: py-gre
-        #   run: pm2 delete greetings-app-dev & EXIT /B 0
+        - name: Delete greetings app
+          working-directory: py-gre
+          run: pm2 delete greetings-app-dev 
 
         - name: Start app
           working-directory: py-gre
