--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -36,7 +36,10 @@ jobs:
         - uses: actions/checkout@v4
         - name: Message about starting
           run: echo deploy-to-dev has started
-
+        - uses: actions/checkout@v4
+          with:
+            repository: 'rinalds61/python-greetings'
+            path: 'py-gre'
 
         - name: Delete greetings app
           working-directory: py-gre
