--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -59,7 +59,10 @@ jobs:
         - uses: actions/checkout@v4
         - name: Message about starting
           run: echo tests-on-dev has started
-
+        - uses: actions/checkout@v4
+          with:
+            repository: 'rinalds61/python-greetings'
+            path: 'py-gre'
         - uses: actions/checkout@v4
           with: 
             repository: 'rinalds61/course-js-api-framework'
