--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -47,7 +47,7 @@ jobs:
 
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev -- 7001
+          run: set PORT=7001 && pm2 start app.py --name greetings-app-dev
 
 
 
