--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -45,9 +45,12 @@ jobs:
         #   working-directory: py-gre
         #   run: pm2 delete greetings-app-dev 
 
+        - name: Set Port
+          run: set PORT=7001
+
         - name: Start app
           working-directory: py-gre
-          run: set PORT=7001 && pm2 start app.py --name greetings-app-dev
+          run: pm2 start app.py --name greetings-app-dev
 
 
 
