--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -41,16 +41,17 @@ jobs:
         #     repository: 'rinalds61/python-greetings'
         #     path: 'py-gre'
 
-        # - name: Delete greetings app
-        #   working-directory: py-gre
-        #   run: pm2 delete greetings-app-dev 
+        - name: Delete greetings app
+          working-directory: py-gre
+          run: pm2 delete greetings-app-dev 
 
-        - name: Set Port
-          run: set PORT=7001
+        # - name: Set Port
+        #   run: set PORT=7001
 
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev
+          run: PORT=7001 pm2 start app.py --name greetings-app-dev
+
 
 
 
