--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -48,12 +48,12 @@ jobs:
         # - name: Set Port
         #   run: set PORT=7001
 
+        # - name: Start app
+        #   working-directory: py-gre
+        #   run: $env:PORT=7001
         - name: Start app
           working-directory: py-gre
-          run: $env:PORT=7001
-        - name: ahha
-          working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev
+          run: pm2 start app.py --name greetings-app-dev -- 7001
           
 
 
