--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -14,6 +14,7 @@ jobs:
     name: Install pip deps
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/build
 
     # steps:
