--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/actions/install-deps
+      - name: Start installing
+        run: ./.github/actions/install-deps
+        shell: bash
 
     # steps:
     #   - uses: actions/checkout@v4
