--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -57,7 +57,7 @@ jobs:
         #   run: $env:PORT=7001
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev -- --port 7001
+          run: pm2 start app.py --name greetings-app-dev -- -p 7001
           
 
 
