--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -25,7 +25,7 @@ jobs:
         run: echo Pip and deps installing has started
       - uses: actions/checkout@v4
         with:
-          repository: 'mtararujs/python-greetings'
+          repository: 'rinalds61/python-greetings'
           path: 'py-gre'
       - name: Install dependecies
         working-directory: py-gre
@@ -57,7 +57,7 @@ jobs:
         #   run: $env:PORT=7001
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev -- run start -- --port 7001
+          run: pm2 start app.py --name greetings-app-dev -- --port 7001
           
 
 
