--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -57,13 +57,9 @@ jobs:
         #   run: $env:PORT=7001
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev --env "PORT=7001"
+          run: pm2 start app.py --name greetings-app-dev -- --port 7001
 
           
-
-
-
-
   tests-on-dev:
     name: Tests-on-DEV
     runs-on: self-hosted
