--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -57,7 +57,8 @@ jobs:
         #   run: $env:PORT=7001
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev -- --port 7001
+          run: PORT=7003 pm2 start app.py --name greetings-app-dev
+
 
           
   tests-on-dev:
