--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -52,12 +52,12 @@ jobs:
         # - name: Set Port
         #   run: set PORT=7001
 
-        # - name: Start app
-        #   working-directory: py-gre
-        #   run: $env:PORT=7001
+        - name: Set port
+          working-directory: py-gre
+          run: $env:PORT=7001
         - name: Start app
           working-directory: py-gre
-          run: PORT=7003 pm2 start app.py --name greetings-app-dev
+          run: pm2 start app.py --name greetings-app-dev
 
 
           
