--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -20,12 +20,12 @@ jobs:
     #     shell: bash
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3.5.2
       - name: Message about starting
         run: echo Pip and deps installing has started
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3.5.2
         with:
-          repository: 'rinalds61/python-greetings'
+          repository: 'mtararujs/python-greetings'
           path: 'py-gre'
       - name: Install dependecies
         working-directory: py-gre
@@ -45,19 +45,19 @@ jobs:
         #     repository: 'rinalds61/python-greetings'
         #     path: 'py-gre'
 
-        # - name: Delete greetings app
-        #   working-directory: py-gre
-        #   run: pm2 delete greetings-app-dev 
+        - name: Delete greetings app
+          working-directory: py-gre
+          run: pm2 delete all
 
         # - name: Set Port
         #   run: set PORT=7001
 
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev
-        - name: Set port
-          working-directory: py-gre
-          run: $env:PORT=7003
+          run: pm2 start app.py --name greetings-app-dev -- --port 7001
+        # - name: Set port
+        #   working-directory: py-gre
+        #   run: $env:PORT=7003
 
 
           
