--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -45,9 +45,9 @@ jobs:
         #     repository: 'rinalds61/python-greetings'
         #     path: 'py-gre'
 
-        - name: Delete greetings app
-          working-directory: py-gre
-          run: pm2 delete all
+        # - name: Delete greetings app
+        #   working-directory: py-gre
+        #   run: pm2 delete all
 
         # - name: Set Port
         #   run: set PORT=7001
