--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -56,7 +56,7 @@ jobs:
         #   run: $env:PORT=7003
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev -f -NODE-PORT 7001
+          run: pm2 start app.py --name greetings-app-dev -f -NODE_PORT 7001
         # - name: Set port
         #   working-directory: py-gre
         #   run: $env:PORT=7003
