--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -56,7 +56,7 @@ jobs:
         #   run: $env:PORT=7003
         - name: Start app
           working-directory: py-gre
-          run: NODE_PORT=7001 pm2 start app.py --name greetings-app-dev -f 
+          run: pm2 start app.py --name greetings-app-dev -- --NODE_PORT=7001
         # - name: Set port
         #   working-directory: py-gre
         #   run: $env:PORT=7003
