--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependecies
         working-directory: py-gre
         run: pip install -r requirements.txt
+      - name: config change add PORT
+        working-directory: py-gre
+        run: pm2 start ecosystem.config.js
 
 
   deploy-to-dev:
@@ -56,7 +59,7 @@ jobs:
         #   run: $env:PORT=7003
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev -- --NODE_PORT=7001
+          run: pm2 start app.py --name greetings-app-dev --port 7001
         # - name: Set port
         #   working-directory: py-gre
         #   run: $env:PORT=7003
