--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -36,7 +36,8 @@ jobs:
 
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev port=7001  --
+          run: PORT=7001 pm2 start app.py --name greetings-app-dev --
+
 
 
           
