--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -34,9 +34,12 @@ jobs:
     needs: [install-pip-deps]  
     steps:
 
+        - name: set port
+          run: $env:PORT = 7001
+
         - name: Start app
           working-directory: py-gre
-          run: PORT=7001 pm2 start app.py --name greetings-app-dev --
+          run: pm2 start app.py --name greetings-app-dev --
 
 
 
