--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -33,12 +33,10 @@ jobs:
     runs-on: self-hosted
     needs: [install-pip-deps]  
     steps:
-        - name: set port (optional)
-          run: $env:PORT = 7001
-
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py --name greetings-app-dev --port 8080
+          run: pm2 start app.py -- name greetings-app-dev -- -- port 7001
+          shell: cmd
 
 
 
