--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -33,10 +33,13 @@ jobs:
     runs-on: self-hosted
     needs: [install-pip-deps]  
     steps:
+        - name: delete
+          run: pm2 delete all
+
         - name: Start app
           working-directory: py-gre
           run: pm2 start app.py -- name greetings-app-dev -- -- port 7001
-          shell: cmd
+          shell: cmd.exe
 
 
 
