--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -33,8 +33,8 @@ jobs:
     runs-on: self-hosted
     needs: [install-pip-deps]  
     steps:
-        # - name: delete
-        #   run: pm2 delete all
+        - name: delete
+          run: pm2 delete all
 
         - name: Start app
           working-directory: py-gre
