--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -38,10 +38,9 @@ jobs:
 
         - name: Start app
           working-directory: py-gre
-          run: pm2 start app.py -- name greetings-app-dev -- --port 7001
+          run: "pm2 start app.py --name greetings-app-dev -- --port=7001"
           shell: cmd
-        - name: save
-          run: pm2 save
+
 
 
 
