--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
         - name: Prepare for Install
           run: "pm2 delete all & set \"errorlevel=0\""
-
+          shell: cmd
         - name: Start app
           working-directory: py-gre
           run: "pm2 start app.py --name greetings-app-dev -- --port=7001"
