--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -57,8 +57,8 @@ jobs:
             path: js-api
         - name: npm install
           working-directory: ./js-api
-          run: npm install; npm audit fix --force
-          # shell: cmd
+          run: "npm install"
+          shell: cmd
           
 
         - name: Testa izpilde sakusies
