--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -17,15 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3.5.2
-      - name: Message about starting
-        run: echo Pip and deps installing has started
-      - uses: actions/checkout@v3.5.2
-        with:
-          repository: 'rinalds61/python-greetings'
-          path: 'py-gre'
-      - name: Install dependecies
-        working-directory: py-gre
-        run: pip install -r requirements.txt
+      - uses: ./.github/actions/install-deps
 
 
   deploy-to-dev:
@@ -34,7 +26,7 @@ jobs:
     needs: [install-pip-deps]  
     steps:
         - name: Prepare for Install
-          run: "pm2 delete all & set \"errorlevel=0\""
+          run: "pm2 delete greetings-app-dev & set \"errorlevel=0\""
           shell: cmd
         - name: Start app
           working-directory: py-gre
