--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -3,6 +3,9 @@ runs:
   steps:
     - name: Message about starting
       run: echo Pip and deps installing has started
+    - name: Prepare for Install
+      run: "pm2 delete all & set \"errorlevel=0\""
+      shell: cmd    
     - uses: actions/checkout@v3.5.2
       with:
         repository: 'rinalds61/python-greetings'
