--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -3,7 +3,7 @@ runs:
   steps:
     - name: Message about starting
       run: echo "Pip and deps installing has started"
-      sehll: cmd   
+      shell: cmd   
     - uses: actions/checkout@v3.5.2
       with:
         repository: 'rinalds61/python-greetings'
