--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -1,9 +1,20 @@
+inputs:
+  port:
+    description: 'Port for node application to run'
+    default: 7001
+  enviroment:
+    description: 'Enviroment for node aplication'
+    default: 'greetings-app-dev'
 runs:
   using: "composite"
   steps:
     - name: Build success
-      run: echo Build of node application is starting
-      shell: bash
-    - name: Install dependencies
-      run: npm install
-      shell: bash
+      run: echo "Build of ${{inputs.enviroment}} application is starting"
+      shell: cmd
+    - name: Prepare for Install
+      run: "pm2 delete ${{inputs.enviroment}} & set \"errorlevel=0\""
+      shell: cmd
+    - name: Start app
+      working-directory: py-gre
+      run: "pm2 start app.py --name ${{inputs.enviroment}} -- --port=${{inputs.port}}"
+      shell: cmd
