--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: ./.github/actions/deploy
         with:
           port: 7001
-          enviroment: 'greetings-app-dev'
+          enviroment: 'dev'
 
        
   tests-on-dev:
