--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -8,7 +8,10 @@ runs:
     - name: Starting Job
       run: echo "Testing on ${{ inputs.enviroment }}"
       shell: cmd
-
+    - uses: actions/checkout@v4
+      with: 
+        repository: 'mtararujs/course-js-api-framework'
+        path: js-api
     - name: npm install
       working-directory: ./js-api
       run: "npm install"
